--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,19 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
+}
+
+html, body, #root {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
+  overflow-x: hidden;
 }
 
 .logo {
   height: 6em;
-  padding: 1.5em;
   will-change: filter;
   transition: filter 300ms;
 }
@@ -34,7 +40,6 @@
 }
 
 .card {
-  padding: 2em;
 }
 
 .read-the-docs {
